--- a/Productos.html
+++ b/Productos.html
@@ -64,7 +64,7 @@
         <!-- Atlético Madrid Visita -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/atm.avif" class="card-img-top" alt="Atlético Madrid Visita">
+            <img src="imagenes/atm.avif" class="card-img-top" alt="Atlético Madrid Visita">
             <div class="card-body">
               <h5 class="card-title">Playera Atlético Madrid Visita</h5>
               <p class="card-text">$499.00 MXN</p>
@@ -76,7 +76,7 @@
         <!-- Inter Tercera -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/innter.avif" class="card-img-top" alt="Inter Tercera Equipación">
+            <img src="imagenes/innter.avif" class="card-img-top" alt="Inter Tercera Equipación">
             <div class="card-body">
               <h5 class="card-title">Playera Inter Tercera Equipación</h5>
               <p class="card-text">$599.00 MXN</p>
@@ -88,7 +88,7 @@
         <!-- Liverpool Local -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/lfc.avif" class="card-img-top" alt="Liverpool Local">
+            <img src="imagenes/lfc.avif" class="card-img-top" alt="Liverpool Local">
             <div class="card-body">
               <h5 class="card-title">Playera Liverpool Local</h5>
               <p class="card-text">$799.00 MXN</p>
@@ -100,7 +100,7 @@
         <!-- PSG Local -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/psg.avif" class="card-img-top" alt="PSG Local">
+            <img src="imagenes/psg.avif" class="card-img-top" alt="PSG Local">
             <div class="card-body">
               <h5 class="card-title">Playera PSG Local</h5>
               <p class="card-text">$549.00 MXN</p>
@@ -112,7 +112,7 @@
         <!-- PSG Visitante -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/psg1.avif "class=card-img-top" alt="PSG Visitante">
+            <img src="imagenes/psg1.avif "class=card-img-top" alt="PSG Visitante">
             <div class="card-body">
               <h5 class="card-title">Playera PSG Visitante</h5>
               <p class="card-text">$649.00 MXN</p>
@@ -124,7 +124,7 @@
         <!-- Barcelona Local -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/fcb.avif" class="card-img-top" alt="FC Barcelona Local">
+            <img src="imagenes/fcb.avif" class="card-img-top" alt="FC Barcelona Local">
             <div class="card-body">
               <h5 class="card-title">Playera FC Barcelona Local</h5>
               <p class="card-text">$899.00 MXN</p>
@@ -136,7 +136,7 @@
         <!-- Real Madrid Local -->
         <div class="col-sm-6 col-lg-4">
           <div class="card h-100 text-center">
-            <img src="/ProyectoFramework/imagenes/Rmd.avif" class="card-img-top" alt="Real Madrid Local">
+            <img src="imagenes/Rmd.avif" class="card-img-top" alt="Real Madrid Local">
             <div class="card-body">
               <h5 class="card-title">Playera Real Madrid Local</h5>
               <p class="card-text">$849.00 MXN</p>
@@ -148,7 +148,7 @@
         <!-- Manchester United Local -->
 <div class="col-sm-6 col-lg-4">
   <div class="card h-100 text-center">
-    <img src="/ProyectoFramework/imagenes/arsn.avif" class="card-img-top" alt="Manchester United Local">
+    <img src="imagenes/arsn.avif" class="card-img-top" alt="Manchester United Local">
     <div class="card-body">
       <h5 class="card-title">Playera Manchester United Local</h5>
       <p class="card-text">$749.00 MXN</p>
