--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="/PracticasHTML/JerseyNations/imagenes/Captura de pantalla 2025-03-20 165603.png " alt="JerseyNations" height="40">
+        <img src="imagenes/Captura de pantalla 2025-03-20 165603.png " alt="JerseyNations" height="40">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active" href="/ProyectoFramework/index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/Productos.html">Productos</a></li>
-            <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/acerca.html">Acerca de</a></li>
-            <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/blog.html">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/contacto.html">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
+            <li class="nav-item"><a class="nav-link" href="acerca.html">Acerca de</a></li>
+            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
             <li class="nav-item"></li>
             <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
           </li>
@@ -40,7 +40,7 @@
   <!-- Hero con video -->
   <section class="position-relative">
     <video class="w-100" autoplay muted loop playsinline style="object-fit: cover; height: 90vh;">
-      <source src="/ProyectoFramework/imagenes/1747435672764omp30yk9.mp4" type="video/mp4">
+      <source src="imagenes/1747435672764omp30yk9.mp4" type="video/mp4">
       Tu navegador no soporta videos HTML5.
     </video>
     <div class="position-absolute top-0 start-0 w-100 h-100 bg-dark bg-opacity-50 d-flex justify-content-center align-items-center text-center text-white">
@@ -110,7 +110,7 @@
         </div>
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="/PracticasHTML/JerseyNations/imagenes/atm.avif" class="card-img-top" alt="Atletico">
+            <img src="imagenes/atm.avif" class="card-img-top" alt="Atletico">
             <div class="card-body">
               <h5 class="card-title">Ofertas del día</h5>
             </div>
@@ -118,7 +118,7 @@
         </div>
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="/PracticasHTML/JerseyNations/imagenes/arsn.avif" class="card-img-top" alt="Arsenal">
+            <img src="imagenes/arsn.avif" class="card-img-top" alt="Arsenal">
             <div class="card-body">
               <h5 class="card-title">Promociones</h5>
               <p class="card-text">Ofertas exclusivas en camisetas auténticas a precios increíbles.</p>
@@ -146,11 +146,11 @@
         <div class="col-md-3 mb-3">
           <h5>Enlaces</h5>
           <ul class="list-unstyled">
-            <li><a href="/ProyectoFramework/index.html" class="text-white">Inicio</a></li>
-            <li><a href="/ProyectoFramework/Productos.html" class="text-white">Productos</a></li>
-            <li><a href="/ProyectoFramework/acerca.html" class="text-white">Acerca de</a></li>
-            <li><a href="/ProyectoFramework/blog.html" class="text-white">Blog</a></li>
-            <li><a href="/ProyectoFramework/contacto.html" class="text-white">Contacto</a></li>
+            <li><a href="index.html" class="text-white">Inicio</a></li>
+            <li><a href="Productos.html" class="text-white">Productos</a></li>
+            <li><a href="acerca.html" class="text-white">Acerca de</a></li>
+            <li><a href="blog.html" class="text-white">Blog</a></li>
+            <li><a href="contacto.html" class="text-white">Contacto</a></li>
           </ul>
         </div>
         <div class="col-md-3 mb-3">
