--- a/acerca.html
+++ b/acerca.html
@@ -20,18 +20,18 @@
   <nav class="navbar navbar-expand-lg navbar-wite bg-white">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="/PracticasHTML/JerseyNations/imagenes/Captura de pantalla 2025-03-20 165603.png" alt="Logo" height="40">
+        <img src="imagenes/Captura de pantalla 2025-03-20 165603.png" alt="Logo" height="40">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/Productos.html">Productos</a></li>
-          <li class="nav-item"><a class="nav-link active" href="/ProyectoFramework/acerca.html">Acerca de</a></li>
-          <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/blog.html">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="/ProyectoFramework/contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link active" href="acerca.html">Acerca de</a></li>
+          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
       </div>
@@ -57,7 +57,7 @@
           </ul>
         </div>
         <div class="col-md-6 text-center">
-          <img src="/PracticasHTML/JerseyNations/imagenes/Captura de pantalla 2025-03-20 165603.png" alt="Equipo JerseyNations" class="img-fluid rounded">
+          <img src="imagenes/Captura de pantalla 2025-03-20 165603.png" alt="Equipo JerseyNations" class="img-fluid rounded">
         </div>
       </div>
     </div>
@@ -74,11 +74,11 @@
         <div class="col-md-3">
           <h5>Enlaces</h5>
           <ul class="list-unstyled">
-            <li><a href="/ProyectoFramework/index.html" class="text-white">Inicio</a></li>
-            <li><a href="/ProyectoFramework/Productos.html" class="text-white">Productos</a></li>
-            <li><a href="/ProyectoFramework/acerca.html" class="text-white">Acerca de</a></li>
-            <li><a href="/ProyectoFramework/blog.html" class="text-white">Blog</a></li>
-            <li><a href="/ProyectoFramework/contacto.html" class="text-white">Contacto</a></li>
+            <li><a href="index.html" class="text-white">Inicio</a></li>
+            <li><a href="Productos.html" class="text-white">Productos</a></li>
+            <li><a href="acerca.html" class="text-white">Acerca de</a></li>
+            <li><a href="blog.html" class="text-white">Blog</a></li>
+            <li><a href="contacto.html" class="text-white">Contacto</a></li>
           </ul>
         </div>
         <div class="col-md-3">
