--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">
-      <img src="/PracticasHTML/JerseyNations/imagenes/Captura de pantalla 2025-03-20 165603.png" alt="JerseyNations" height="40">
+      <img src="imagenes/Captura de pantalla 2025-03-20 165603.png" alt="JerseyNations" height="40">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
       <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
       <!-- Post 1 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="/ProyectoFramework/imagenes/mex.png" class="card-img-top" alt="Tendencias 2023">
+          <img src="imagenes/mex.png" class="card-img-top" alt="Tendencias 2023">
           <div class="card-body">
             <h5 class="card-title">Tendencias en jerseys de fútbol para 2024</h5>
             <p class="text-muted">📅 15 Abril 2024</p>
@@ -56,7 +56,7 @@
       <!-- Post 2 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="/ProyectoFramework/imagenes/Rak.webp" class="card-img-top" alt="Cuidado de playeras">
+          <img src="imagenes/Rak.webp" class="card-img-top" alt="Cuidado de playeras">
           <div class="card-body">
             <h5 class="card-title">Cómo mantener tus jerseys en perfecto estado</h5>
             <p class="text-muted">📅 30 Marzo 2024</p>
@@ -68,7 +68,7 @@
       <!-- Post 3 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="/ProyectoFramework/imagenes/Jap.jpg" class="card-img-top" alt="Materiales sustentables">
+          <img src="imagenes/Jap.jpg" class="card-img-top" alt="Materiales sustentables">
           <div class="card-body">
             <h5 class="card-title">Materiales ecológicos en nuestros jerseys</h5>
             <p class="text-muted">📅 20 Febrero 2024</p>
