--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="/PracticasHTML/JerseyNations/imagenes/Captura de pantalla 2025-03-20 165603.png" alt="JerseyNations" height="40">
+                <img src="imagenes/Captura de pantalla 2025-03-20 165603.png" alt="JerseyNations" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent">
                 <span class="navbar-toggler-icon"></span>
