--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div>
         <h1 class="display-3 fw-bold">JerseyNations</h1>
         <p class="lead">Since 2025</p>
-        <a href="productos.html" class="btn btn-danger mt-3">Explorar Colección</a>
+        <a href="/productos.html" class="btn btn-danger mt-3">Explorar Colección</a>
       </div>
     </div>
   </section>
